# actual-budget-transformer

./: .gitignore  BRANCH_NOTES.md  Containerfile  README.md  config.template.yml  process_transactions.sh  pyproject.toml
.devcontainer/: Containerfile  devcontainer.json  postCreateCommand.sh
.github/workflows/: generic-docker-build-push.yml  prod-container-build.yaml
src/actual_budget_transformer/: config.py  factory.py  logging_config.py  main.py
src/actual_budget_transformer/processors/: base_processor.py  ubs_cards_csv_transaction_processor.py  ubs_csv_transaction_processor.py
tests/: test_ubs_csv_transaction_processor.py
tests/data/: test_config.yml  ubs_invalid_encoding.csv  ubs_invalid_header.csv  ubs_invalid_transaction_columns.csv  ubs_valid.csv
