[project]
name = "actual_budget_transformer"
version = "0.1.1"
requires-python = "==3.13.*"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
]

[project.scripts]
actual-budget-transformer = "actual_budget_transformer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "black>=25.1.0,<26",
    "ipykernel>=7.1,<8",
]

